--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Example</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>GitHub Example</title>
+    </head>
+    <body>
+        <h2>Have a good day</h2>
+    </body>
 </html>
